force-app/main/default/objects/Kiva_Collateral__c/Kiva_Collateral__c.object-meta.xml
<CustomObject>
    <label>Kiva Collateral</label>
    <nameField>
        <displayFormat>KC-{0000000}</displayFormat>
        <label>Kiva Collateral Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Kiva Collateral Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>