force-app/main/default/objects/Kiva_Collateral__c/fields/Brand_Type_and_series__c.field-meta.xml
<CustomField>
    <fullName>Brand_Type_and_series__c</fullName>
    <label>Brand / Type and series</label>
    <length>255</length>
    <type>Text</type>
</CustomField>