force-app/main/default/objects/Kiva_Collateral__c/fields/Collateral_Item_s__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Item_s__c</fullName>
    <inlineHelpText>Asset designation</inlineHelpText>
    <label>Collateral Item(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>