force-app/main/default/objects/Kiva_Collateral__c/fields/Collateral_Value__c.field-meta.xml
<CustomField>
    <fullName>Collateral_Value__c</fullName>
    <inlineHelpText>Purchase Price</inlineHelpText>
    <label>Collateral Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>