force-app/main/default/objects/Kiva_Collateral__c/fields/Kiva_Client__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Kiva Client</label>
    <referenceTo>Kiva_Client__c</referenceTo>
    <relationshipLabel>Kiva Collateral Items</relationshipLabel>
    <relationshipName>Kiva_Collateral_Items</relationshipName>
    <type>Lookup</type>
</CustomField>