force-app/main/default/objects/Kiva_Collateral__c/fields/Kiva_Loan__c.field-meta.xml
<CustomField>
    <fullName>Kiva_Loan__c</fullName>
    <label>Kiva Loan</label>
    <referenceTo>Kiva_Loan__c</referenceTo>
    <relationshipLabel>Kiva Collateral Items</relationshipLabel>
    <relationshipName>Kiva_Collateral_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>