force-app/main/default/objects/Kiva_Collateral__c/fields/Purchase_year__c.field-meta.xml
<CustomField>
    <fullName>Purchase_year__c</fullName>
    <label>Purchase year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>